syntax = "proto3";

package user;

option go_package = "go-microservice-boilerplate/internal/proto/user";

import "internal/proto/common/common.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (common.StatusResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message UserResponse {
  User user = 1;
  common.StatusResponse status = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  common.StatusResponse status = 3;
}
